<resources>
    <string name="app_name">Donation 4.0</string>
    <string name="action_settings">Settings</string>
    <string name="donateTitle">Welcome, Homer!</string>
    <string name="donateSubtitle">Please, give generously</string>
    <string name="donateButton">DONATE</string>
    <string name="paypalButton">PayPal</string>
    <string name="directButton">Direct</string>
    <string name="amount">Amount:</string>
    <string name="totalSoFar">Total so far:</string>
    <string name="total">$</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="title_activity_report">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="menuReset">Reset</string>
</resources>
