<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.bask.donation10.ie.app.activities.Donate">

    <item
        android:id="@+id/menuReport"
        android:orderInCategory="100"
        android:title="@string/menuReport"
        android:onClick="report"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuDonate"
        android:orderInCategory="100"
        android:onClick="donate"
        android:title="@string/menuDonate"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuReset"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menuReset"
        android:onClick="reset" />

</menu>
